<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/fragment_edit_user_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/purple_700">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_on_boarding_id_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_edit_user_toolbar"
        android:layout_marginStart="16dp"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_on_boarding_id_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/idLabel"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/textSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.15" />

        <EditText
            android:id="@+id/fragment_on_boarding_id_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/idHint"
            android:imeOptions="actionDone"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_on_boarding_id_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.85" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/fragment_on_boarding_view_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_on_boarding_id_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/viewUser" />

    <TextView
        android:id="@+id/fragment_on_boarding_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_on_boarding_view_user_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        android:textSize="20sp" />

    <Button
        android:id="@+id/fragment_on_boarding_create_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_on_boarding_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/createUser" />
</RelativeLayout>