<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/fragment_create_user_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/purple_700">

        <ImageView
            android:id="@+id/fragment_create_user_back_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_keyboard_arrow_left_24"
            android:padding="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/createUser"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fragment_create_user_toolbar"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_create_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_create_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nameLabel"
                android:textSize="@dimen/textSize"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.25" />

            <EditText
                android:id="@+id/fragment_create_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/nameHint"
                android:inputType="text"
                android:imeOptions="actionNext"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/fragment_create_name_text_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.75" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_create_user_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_create_user_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/usernameLabel"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.25" />

            <EditText
                android:id="@+id/fragment_create_user_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/userNameHint"
                android:inputType="text"
                android:imeOptions="actionNext"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/fragment_create_user_name_text_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.75" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_create_email_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_create_email_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/emailLabel"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/textSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.25" />

            <EditText
                android:id="@+id/fragment_create_email_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/fragment_create_email_text_view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.75" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/fragment_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/createUser" />
    </LinearLayout>
    <include
        android:id="@+id/fragment_create_progress_bar"
        layout="@layout/view_full_screen_progress_bar"
        android:visibility="gone" />
</RelativeLayout>